--- a/User Profile Book/Info.plist
+++ b/User Profile Book/Info.plist
@@ -34,5 +34,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This App can take photos using Camera and store it for user profiles.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Can choose photo from photo library</string>
 </dict>
 </plist>
